# uwb-ips

./: .gitignore
ros/: requirements.txt
ros/src/uwbips_launchers/: package.xml  setup.cfg  setup.py
ros/src/uwbips_serial/: package.xml  setup.cfg  setup.py
ros/src/uwbips_simulations/: package.xml  setup.cfg  setup.py
ros/src/uwbips_systems/: package.xml  setup.cfg  setup.py
src/uwbips_app/back_app/: package-lock.json  package.json
src/uwbips_app/backend/: app.ts  package-lock.json  package.json  tsconfig.json
src/uwbips_app/backend/models/: anchor.ts  network.ts  state.ts  tag.ts  user.ts
src/uwbips_app/backend/tests/: crud.ts  crud_test.ts  type_test.ts
src/uwbips_app/backend/utils/: database.ts  jwt.ts  logger.ts  password.ts
src/uwbips_app/front_app/: package-lock.json  package.json
src/uwbips_app/frontend/: package-lock.json  package.json
src/uwbips_firmwares/lib/UWBIPS_SDK/: uwbips_sdk.h
src/uwbips_interfaces/: CMakeLists.txt  package.xml
src/uwbips_main/: package.xml  setup.cfg  setup.py
src/uwbips_main/launch/: uwbips_launch.py
src/uwbips_tests/: package.xml  setup.cfg  setup.py
src/uwbips_utilities/: CMakeLists.txt  package.xml
src/uwbips_utilities/include/uwbips_utilities/: anchor_node.hpp  espnow_serial.hpp  ips_processor.hpp  node_manager.hpp  tag_node.hpp
src/uwbips_utilities/msg/: AnchorData.msg  NodemanReq.msg  TagData.msg
src/uwbips_utilities/src/: espnow_serial_main.cpp  node_manager_main.cpp
src/uwbips_utilities/src/uwbips_utilities/: anchor_node.cpp  espnow_serial.cpp  node_manager.cpp  tag_node.cpp
(+14 files in other folders)
